kubernetes-logging/kibana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: observability
  name: kibana-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: kibana.easybarin.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: kibana-kibana
                port:
                  number: 6501
